added chat page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,4 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-
+.message{
+    &.owner{
+        flex-direction: row-reverse;
+        p{
+            background-color: beige;
+        }
+    }
+}
